--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <svg width="100%" height="600px" #svgEle>
   <line
-    *ngFor="let rel of relationships"
+    *ngFor="let rel of relationshipNodes"
     [attr.x1]="rel.source.x"
     [attr.x2]="rel.target.x"
     stroke="black"
@@ -9,9 +9,11 @@
   ></line>
 
   <circle
-    *ngFor="let entity of entities"
-    [attr.transform]="'translate(' + entity.x + ', ' + entity.y + ')'"
+    *ngFor="let personNode of peopleNodes"
+    [attr.transform]="
+      'translate(' + personNode.x + ', ' + personNode.y + ')'
+    "
     r="5"
-    [style.fill]="entity.color"
+    [style.fill]="personNode.color"
   ></circle>
 </svg>
