--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <svg width="100%" height="600px" #svgEle>
   <line
-    *ngFor="let rel of relationshipNodes"
+    *ngFor="let rel of relationshipNodesForRendering"
     [attr.x1]="rel.source.x"
     [attr.x2]="rel.target.x"
     stroke="black"
