--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,21 @@
 <svg width="100%" height="600px" #svgEle>
-  <line
-    *ngFor="let rel of relationshipNodesForRendering"
-    [attr.x1]="rel.source.x"
-    [attr.x2]="rel.target.x"
-    stroke="black"
-    [attr.y1]="rel.source.y"
-    [attr.y2]="rel.target.y"
-  ></line>
+  @for (rel of relationshipNodesForRendering; track rel) {
+    <line
+      [attr.x1]="rel.source.x"
+      [attr.x2]="rel.target.x"
+      stroke="black"
+      [attr.y1]="rel.source.y"
+      [attr.y2]="rel.target.y"
+    ></line>
+  }
 
-  <circle
-    *ngFor="let personNode of peopleNodes"
-    [attr.transform]="
-      'translate(' + personNode.x + ', ' + personNode.y + ')'
-    "
-    r="5"
-    [style.fill]="personNode.color"
-  ></circle>
+  @for (personNode of peopleNodes; track personNode) {
+    <circle
+      [attr.transform]="
+        'translate(' + personNode.x + ', ' + personNode.y + ')'
+      "
+      r="5"
+      [style.fill]="personNode.color"
+    ></circle>
+  }
 </svg>
